# Meta-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  validate_system.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: graph.py  planner.py  reader.py  writer.py
backend/app/api/: routes.py
backend/app/ingestion/: pipeline.py
backend/app/memory/: strategy_memory.py
backend/app/models/: db_models.py  schemas.py
backend/app/optimization/: bandit.py  evaluator.py
backend/app/research/: __init__.py  controller.py  coverage.py  evidence_graph.py
backend/app/retrieval/: bm25_retrieval.py  dense.py  diagnostics.py  guardrails.py  hybrid.py  query_rewriter.py  reranker.py
backend/app/verification/: __init__.py  citation_verifier.py  claim_extractor.py
backend/scraper/: scraper.py
backend/tests/: test_e2e.py  test_meta_rag_extensions.py  test_metrics.py  test_retrieval.py
docs/: PROJECT-SPEC.md  SYSTEM-PROMPT.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DocumentList.tsx  PaperSelectionModal.tsx  QueryForm.tsx  ResultDisplay.tsx  ThemeToggle.tsx  Toast.tsx  answer-viewer.tsx  bandit-viewer.tsx  data-source-modal.tsx  evidence-panel.tsx  file-upload.tsx  header.tsx  huggingface-papers.tsx  metrics-panel.tsx  pipeline-panel.tsx  query-input.tsx  result-panel.tsx  sidebar.tsx
frontend/src/lib/: api.ts  store.ts  types.ts
